-Development commit.
-Database migration.
-Annotated some Models.
-Able to upload photo (SS).
